# seed-layer-screening

./: .gitignore  README.md  app.py  pyproject.toml  setup_hpc.sh
.streamlit/: config.toml
configs/: default.yaml  docker.yaml  hpc.yaml
data/: sample_materials.txt  test_materials.txt
docs/: parameters_cn.md
docs/superpowers/plans/: 20260616-pipeline-refactor.md  20260618-config-ui.md  20260618-interface-energy.md
docs/superpowers/specs/: 20260616-pipeline-refactor-design.md  20260618-config-ui-design.md  20260618-interface-energy-design.md
output7/: run_wrapper.py  seed_layer.py  seed_layer.py.bak
output7/原材料池/: run_config.json  step1_materials_pool.csv
output7/计算结果/: step2_stability.csv  step3_lattice_match.csv  step4_adsorption.csv  step5_diffusion.csv
output7/评分/: final_ranking.csv  screening_summary.csv
src/: main.py  seed_layer_pipeline.py  seed_layer_pipeline_improved.py
src/debug/: debug_lattice.py  debug_lattice2.py  debug_neb.py
src/seed_layer/: __init__.py  config.py  io.py  pipeline.py  reporting.py
src/seed_layer/calculators/: __init__.py  base.py  chgnet.py  mace.py
src/seed_layer/steps/: __init__.py  adsorption.py  base.py  diffusion.py  interface.py  lattice.py  stability.py
tests/: __init__.py  test_calculators.py  test_calculators_mace.py  test_config.py  test_interface.py  test_io.py
